tests/neg-custom-args/captures/sep-mut-iterator.check
-- Error: tests/neg-custom-args/captures/sep-mut-iterator.scala:7:25 ---------------------------------------------------
7 |  def map[U](f: T => U): Iterator[U] = new Iterator: // error
  |                         ^^^^^^^^^^^
  |   Separation failure: method map's result type Iterator[U]^{any.rd} hides non-local this of class trait Iterator.
  |   The access must be in a consume method to allow this.
-- Error: tests/neg-custom-args/captures/sep-mut-iterator.scala:12:55 --------------------------------------------------
12 |def mappedIterator[T, U](it: Iterator[T]^, f: T => U): Iterator[U] = new Iterator: // error
   |                                                       ^^^^^^^^^^^
   |                Separation failure: method mappedIterator's result type Iterator[U]^{any.rd} hides parameter it.
   |                The parameter needs to be annotated with consume to allow this.
